--- a/training_args.yaml
+++ b/training_args.yaml
@@ -1,4 +1,4 @@
-model: YOLOv9s.pt
+model: YOLOv9m.pt
 project: project
 name: name
 model_dir: prject/name # only to continue from a checkpoint. mode_dir inside `train_results`. this is script specific argument.
@@ -8,7 +8,7 @@ data: dataset/data.yaml
 epochs: 100
 time: null
 patience: 100
-batch: 8
+batch: 2
 imgsz: 640
 save: true
 save_period: 5
